Split projeto into identificacao only, configures unit tests and create tests for identificaousecase
